added referee comments

--- a/cite.bib
+++ b/cite.bib
@@ -670,6 +670,25 @@ elt}, B.~D. and {Hansen}, F.~K. and {Reinecke}, M. and {Bartelmann}, M.},
  year = {2019}
 }
 
+@article{Guzik:2005,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2005PhRvD..72d3503G},
+ archiveprefix = {arXiv},
+ author = {{Guzik}, Jacek and {Bernstein}, Gary},
+ doi = {10.1103/PhysRevD.72.043503},
+ eid = {043503},
+ eprint = {astro-ph/0507546},
+ journal = {\prd},
+ keywords = {98.80.Es, 95.75.-z, 98.62.Sb, Observational cosmology, Observation and data reduction techniques, computer modeling and simulation, Gravitational lenses and luminous arcs, Astrophysics},
+ month = {Aug},
+ number = {4},
+ pages = {043503},
+ primaryclass = {astro-ph},
+ title = {{Inhomogeneous systematic signals in cosmic shear observations}},
+ volume = {72},
+ year = {2005}
+}
+
 @article{Ivezic:2008,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2008SerAJ.176....1I},
@@ -797,6 +816,25 @@ elt}, B.~D. and {Hansen}, F.~K. and {Reinecke}, M. and {Bartelmann}, M.},
  title = {{Weak Lensing for Precision Cosmology}},
  volume = {56},
  year = {2018}
+}
+
+@article{Shirasaki:2019,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.486...52S},
+ archiveprefix = {arXiv},
+ author = {{Shirasaki}, Masato and {Hamana}, Takashi and {Takada}, Masahiro and
+{Takahashi}, Ryuichi and {Miyatake}, Hironao},
+ doi = {10.1093/mnras/stz791},
+ eprint = {1901.09488},
+ journal = {\mnras},
+ keywords = {gravitational lensing: weak, method: numerical, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Jun},
+ number = {1},
+ pages = {52-69},
+ primaryclass = {astro-ph.CO},
+ title = {{Mock galaxy shape catalogues in the Subaru Hyper Suprime-Cam Survey}},
+ volume = {486},
+ year = {2019}
 }
 
 @article{Troxel:2015,
