added referee comments

--- a/Heydenreich_et_al.tex
+++ b/Heydenreich_et_al.tex
@@ -36,6 +36,7 @@
 \usepackage{graphicx}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{txfonts}
+\usepackage[section]{placeins}
 % \usepackage{subcaption}
 %\usepackage{hyperref}
 
