added catherine's suggestion

--- a/Heydenreich_et_al.tex
+++ b/Heydenreich_et_al.tex
@@ -104,7 +104,8 @@ For current cosmic shear surveys, the estimated systematic error is becoming com
 
 In this paper we focus on systematic effects induced by variation in survey depth that is so far unaccounted for in cosmic shear analyses \citep{Vale:2004}.   For a fixed exposure time survey, varying atmospheric conditions, dithering strategies and galactic extinction all contribute to an inhomogeneous limiting magnitude as a function of sky position.   In order to assess the impact of variable depth for current and future surveys we build an analytical model for the effect based on the survey specifications of the Kilo-Degree Survey \citep[KiDS,][]{Kuijken:2015}.  To first order, the depth variation in KiDS can be modelled by a piece-wise constant depth function, which varies between each $1\,\text{deg}^2$ square pointing.   KiDS object detection is defined in the $r$-band as these images were chosen to be significantly deeper in comparison to the other optical and near-infra red filters.   We therefore quantify survey depth with the limiting $r$-band magnitude, as defined in \citet{2017A&A...604A.134D}.  We defer the study of multi-band variable depth and its impact on photometric redshift accuracy for future work.
 
-{\bf So far the effects of varying depth have not been extensively studied: \citet{Guzik:2005} investigate the effect of a general, position-dependent multiplicative shear bias on the shear power spectrum through simulations, but do not perform a quantitative analysis. Furthermore, varying depth was one of the effects included in mock catalogs in the Subaru Hyper Suprime-Cam Survey \citep{Shirasaki:2019}, but they did not discuss its implications in detail.
+{\bf This work is complementary to the analysis of \citet{Guzik:2005} who investigate the effect of a general, position-dependent multiplicative shear bias on the shear power spectrum.  In principle the varying depth of the source galaxy sample that we study here could be recast as a varying effective shear bias.  The inclusion of an inhomogeneous distribution of source galaxies has also been explored using mock catalogs of the Subaru Hyper Suprime-Cam Survey \citep{Shirasaki:2019}, with a focus on resulting estimation of the cosmic shear covariance matrix.
+
 }
 
 %The depth of a pointing primarily influences the number density as well as the average redshift of galaxies, meaning that a variation in depth is responsible for a correlation between those two quantities (see Fig. \ref{fig:nz_of_meanz}).
